fix stats overflow

--- a/packages/augur-simplified/src/modules/common/labels.styles.less
+++ b/packages/augur-simplified/src/modules/common/labels.styles.less
@@ -121,7 +121,7 @@
 
 @media @breakpoint-mobile-tablet {
   .AppStats {
-    height: @size-86;
+    height: auto;
     padding: 0;
     padding-left: @size-4;
     padding-right: @size-4;
